Enhance postconditions and update non-static which_sha function

--- a/verification/cbmc/proofs/aws_cryptosdk_private_derive_key_v2/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_private_derive_key_v2/Makefile
@@ -25,6 +25,9 @@ HARNESS_FILE = $(HARNESS_ENTRY).c
 
 CBMCFLAGS +=
 
+# this is defined on cipher.c
+DEFINES += -DMSG_ID_LEN_V2=32
+
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/byte_buf.c
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/common.c
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/error.c
