Make use of defined value

--- a/verification/cbmc/proofs/aws_cryptosdk_private_commitment_eq/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_private_commitment_eq/Makefile
@@ -18,17 +18,20 @@ sinclude ../Makefile.local
 include ../Makefile.local_default
 include ../Makefile.aws_byte_buf
 #########
-# Commitment values are 32 bytes long. In aws_cryptosdk_private_commitment_eq,
-# two of these are compared in a loop with (32 / sizeof(uintptr_t)) iterations.
+# Commitment values are 32 bytes long.
+COMMITMENT_BUF_SIZE = 32
+# In aws_cryptosdk_private_commitment_eq, two commitment values are
+# compared in a loop with (32 / sizeof(uintptr_t)) iterations.
 # (32 / sizeof(uintptr_t)) equals 4 since sizeof(uintptr_t) is 8UL
 COMMITMENT_EQ_ITERATIONS = 4
-MAX_COMMITMENT_BUF_SIZE = 32
 #########
 PROOF_UID = aws_cryptosdk_private_commitment_eq
 HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
 CBMCFLAGS += 
+
+DEFINES += -DCOMMITMENT_BUF_SIZE=$(COMMITMENT_BUF_SIZE)
 
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/byte_buf.c
 PROJECT_SOURCES += $(SRCDIR)/source/cipher.c
@@ -40,7 +43,7 @@ PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 PROOF_SOURCES += $(PROOF_SOURCE)/utils.c
 
 UNWINDSET += aws_cryptosdk_private_commitment_eq.0:$(call addone, $(COMMITMENT_EQ_ITERATIONS))
-UNWINDSET += aws_byte_buf_contents_match.0:$(call addone, $(MAX_COMMITMENT_BUF_SIZE))
+UNWINDSET += aws_byte_buf_contents_match.0:$(call addone, $(COMMITMENT_BUF_SIZE))
 ###########
 
 include ../Makefile.common
