--- a/verification/cbmc/proofs/sign_header/Makefile
+++ b/verification/cbmc/proofs/sign_header/Makefile
@@ -40,6 +40,8 @@ DEFINES += -DAWS_CRYPTOSDK_HASH_ELEMS_ARRAY_INIT_GENERATOR=array_list_item_gener
 # Without this flag, running this proof causes the CBMC error of 
 # "too many addressed objects: maximum number of objects is set to 2^n=256 (with n=8);
 # use the `--object-bits n` option to increase the maximum number"
+# The proof hits the error when the line "rv = aws_cryptosdk_hdr_write(&session->header,
+# &actual_size, session->header_copy, session->header_size);" is reached.
 CBMCFLAGS += --object-bits 9
 
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/byte_buf.c
