Minor updates to CBMC header proofs  (#671)
* Split aws_cryptosdk_hdr_parse into smaller functions

Resolves #639.

* Remove unused assumptions on header->alloc and update MAX_IV_LEN to be more general

* Update preconditions on the source code

* Use UINT8_MAX instead of 255

* Comment on MAX_IV_LEN

Co-authored-by: Alex Chew <alex@alexchew.net>
Co-authored-by: Alex Chew <alex-chew@users.noreply.github.com>
Co-authored-by: Adrian Palacios <73246657+adpaco-aws@users.noreply.github.com>

--- a/verification/cbmc/proofs/aws_cryptosdk_hdr_write/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_hdr_write/Makefile
@@ -22,10 +22,11 @@ PROOF_UID = aws_cryptosdk_hdr_write
 HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-# Values are chosen for performance. 
+# Values for MAX_TABLE_SIZE and MAX_EDK_LIST_ITEMS are chosen for performance.
 # Increaseing either does not increase the coverage. 
-MAX_EDK_LIST_ITEMS ?= 1
-MAX_IV_LEN ?= 12
+# Value for MAX_IV_LEN chosen to avoid overflow on cast (uint8_t)hdr->iv.len)
+MAX_EDK_LIST_ITEMS ?= 2
+MAX_IV_LEN ?= UINT8_MAX # Max value for uint8
 MAX_TABLE_SIZE ?= 2
 
 DEFINES += -DARRAY_LIST_TYPE="struct aws_cryptosdk_edk"
