Remove copyright year on Makefile

--- a/verification/cbmc/proofs/default_cmm_generate_enc_materials/Makefile
+++ b/verification/cbmc/proofs/default_cmm_generate_enc_materials/Makefile
@@ -1,4 +1,4 @@
-# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License"). You may not use
 # this file except in compliance with the License. A copy of the License is
@@ -25,7 +25,6 @@ MAX_TABLE_SIZE ?= 1
 PRIME_STRING_LEN=10
 #########
 PROOF_UID = default_cmm_generate_enc_materials
-
 HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
