Stub out hdr_write. Use default CBMC_OBJECT_BITS value

--- a/verification/cbmc/proofs/sign_header/Makefile
+++ b/verification/cbmc/proofs/sign_header/Makefile
@@ -18,9 +18,7 @@ include ../Makefile.local_default
 include ../Makefile.aws_byte_buf
 include ../Makefile.string
 
-
 PROOF_UID = sign_header
-
 HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
@@ -38,14 +36,6 @@ DEFINES += -DARRAY_LIST_TYPE_HEADER=\"aws/cryptosdk/edk.h\"
 DEFINES += -DMAX_TRACE_LIST_ITEMS=$(MAX_TRACE_LIST_ITEMS)
 DEFINES += -DMAX_IV_LEN=$(MAX_IV_LEN)
 DEFINES += -DAWS_CRYPTOSDK_HASH_ELEMS_ARRAY_INIT_GENERATOR=array_list_item_generator
-
-# The maximum number of objects is set to 2^8 = 256. This option changes that to 2^9. 
-# Without this flag, running this proof causes the CBMC error of 
-# "too many addressed objects: maximum number of objects is set to 2^n=256 (with n=8);
-# use the `--object-bits n` option to increase the maximum number"
-# The proof hits the error when the line "rv = aws_cryptosdk_hdr_write(&session->header,
-# &actual_size, session->header_copy, session->header_size);" is reached.
-CBMC_OBJECT_BITS = 9
 
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/byte_buf.c
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/hash_table.c
@@ -86,6 +76,7 @@ PROOF_SOURCES += $(PROOF_STUB)/aws_array_list_sort_noop_stub.c
 PROOF_SOURCES += $(PROOF_STUB)/aws_cryptosdk_enc_ctx_size_stub.c
 PROOF_SOURCES += $(PROOF_STUB)/aws_cryptosdk_hash_elems_array_init_stub.c
 PROOF_SOURCES += $(PROOF_STUB)/aws_default_allocator_stub.c
+PROOF_SOURCES += $(PROOF_STUB)/hdr_write_stub.c
 PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 REMOVE_FUNCTION_BODY += aws_array_list_get_at_ptr
