Disable pointer-overflow check for aws_cryptosdk_enc_ctx_clone
Signed-off-by: Felipe R. Monteiro <felisous@amazon.com>

--- a/verification/cbmc/proofs/aws_cryptosdk_enc_ctx_clone/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_enc_ctx_clone/Makefile
@@ -23,6 +23,9 @@ MAX_TABLE_SIZE ?= 4
 # Time on my laptop: 5m10s
 #########
 
+# Disable pointer overflow check
+CBMC_FLAG_POINTER_OVERFLOW_CHECK=
+
 PROOF_UID = aws_cryptosdk_enc_ctx_clone
 
 HARNESS_ENTRY = $(PROOF_UID)_harness
