Use private submodules before CI run
The CBMC CI will now replace some of the submodules in this repository
with 'private' versions if the CI run was triggered by the private
version of this repository.

--- a/cbmc-ci/ci-config.yaml
+++ b/cbmc-ci/ci-config.yaml
@@ -22,4 +22,7 @@ behaviors:
 
 
 checkout-script:
-  - git submodule update --init –-checkout --recursive
+  # If this is the private version of the repository, we need to pull in
+  # the private versions of the submodules.
+  - "echo Originating GitHub repository: ${GITHUB_REPOSITORY}"
+  - cbmc-ci/switch-private-submodules --verbose env
