[squash] Move switch-private-submodules script to repo root

--- a/cbmc-ci/ci-config.yaml
+++ b/cbmc-ci/ci-config.yaml
@@ -25,4 +25,4 @@ checkout-script:
   # If this is the private version of the repository, we need to pull in
   # the private versions of the submodules.
   - "echo Originating GitHub repository: ${GITHUB_REPOSITORY}"
-  - cbmc-ci/switch-private-submodules --verbose env
+  - ./switch-private-submodules --verbose env
