feat: AWS KMS multi-Region Key support
Added the new keyring KmsMrkAwareSymmetricKeyring that supports AWS KMS
multi-Region keys.
Added the helper MultiKeyringBuilder that composes multiple
KmsMrkAwareSymmetricKeyrings together to handle multiple CMKs.

See https://docs.aws.amazon.com/kms/latest/developerguide/multi-region-keys-overview.html
for more details about AWS KMS multi-Region Keys.
See https://docs.aws.amazon.com/encryption-sdk/latest/developer-guide/configure.html#config-mrks
for more details about how the AWS Encryption SDK interoperates
with AWS KMS multi-Region keys.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "verification/litani"]
 	path = verification/litani
 	url = https://github.com/awslabs/aws-build-accumulator
+[submodule "aws-encryption-sdk-specification"]
+	path = aws-encryption-sdk-specification
+	url = https://github.com/awslabs/aws-encryption-sdk-specification.git
