--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -67,9 +67,8 @@ jobs:
       - name: Run Interop Test Vectors
         run: |
           echo WORKSPACE ${{github.workspace}}
-          find . -name aws
-          find . -name libaws-encryption-sdk.dylib
           cd tests/TestVectors/
+          ls ../../install/
           make decrypt_dafny
           make encrypt
           make decrypt
