--- a/tests/TestVectors/Makefile
+++ b/tests/TestVectors/Makefile
@@ -1,6 +1,7 @@
 test_vectors: *.cpp *.h
 	g++ -g -ggdb --std=c++14 -o test_vectors -I../../include/ *.cpp \
 	-I/opt/homebrew/include/ -L/opt/homebrew/lib/ \
+	-I../../install/include/ -L../../install/lib/
 	../../build-aws-encryption-sdk-c/Debug/libaws-encryption-sdk.dylib \
 	../../build-aws-encryption-sdk-c/aws-encryption-sdk-cpp/Debug/libaws-encryption-sdk-cpp.dylib \
 	-laws-cpp-sdk-core -laws-cpp-sdk-kms -laws-c-common -lcrypto
