--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -66,8 +66,7 @@ jobs:
 
       - name: Run Interop Test Vectors
         run: |
-          echo WORKSPACE ${{github.workspace}}
-          find . -name kms_keyring.h
+          find . -name libaws-cpp-sdk-core.dylib
           cd tests/TestVectors/
           ls ../../install/
           make decrypt_dafny
