--- a/tests/TestVectors/Makefile
+++ b/tests/TestVectors/Makefile
@@ -7,6 +7,7 @@ test_vectors: *.cpp *.h
 	-laws-cpp-sdk-core -laws-cpp-sdk-kms -laws-c-common -lcrypto
 	install_name_tool -add_rpath ../../build-aws-encryption-sdk-c/Debug/ test_vectors
 	install_name_tool -add_rpath ../../build-aws-encryption-sdk-c/aws-encryption-sdk-cpp/Debug/ test_vectors
+	install_name_tool -add_rpath ../../build-aws-sdk-cpp/src/aws-cpp-sdk-core/Debug/ test_vectors
 
 decrypt_dafny: test_vectors
 	./test_vectors decrypt --manifest-path ./from-dafny --manifest-name decrypt-manifest.json
@@ -18,8 +19,3 @@ encrypt: test_vectors
 
 decrypt: test_vectors
 	./test_vectors decrypt --manifest-path ./local --manifest-name decrypt-manifest.json
-
-
-hold:
-	../../build-aws-encryption-sdk-c/Debug/libaws-encryption-sdk.dylib
-	../../build-aws-encryption-sdk-c/aws-encryption-sdk-cpp/Debug/libaws-encryption-sdk-cpp.dylib
