--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -67,6 +67,7 @@ jobs:
       - name: Run Interop Test Vectors
         run: |
           find . -name libaws-c-common.1.dylib
+          ls install/lib/
           cd tests/TestVectors/
           ls ../../install/
           make decrypt_dafny
